# pyspacer

./: .coveralls.yml  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  Dockerfile_min  MANIFEST.in  README.md  coralfeats.py  license.txt  mailman.py  main.py  notebook_test.qmd  pyproject.toml  requirements.txt  setup.py  tasks.py
.github/workflows/: python-app.yml
requirements/: dev.txt  max.txt  min.txt  np1.txt
scripts/: aws_shakeout.py  beta_regression_testing.py  classifier_training_regression.py  features_extracting_training.py  make_legacy_score_for_regression_testing.py  make_legacy_score_for_testing.py  regression_debug.py  release.sh  release_ec2.sh  run_new.py  scripts_utils.py
scripts/aws/: .gitignore  batch_large.py  batch_simple.py  submit_aws_batch_job.py  test_memory.py  test_memory_aws.py  test_memory_local.py  test_scaling.py  tmp.py  utils.py
scripts/docker/: runtimes.py
scripts/regression/: caffe_extractor.py  efficientnet_extractor.py  retrain_source.py  tmp.py  train_classifier.py  utils.py
spacer/: __init__.py  aws.py  byteio_storage.py  caffe_utils.py  config.py  data_classes.py  exceptions.py  extract_features.py  extract_features_utils.py  mailman.py  messages.py  storage.py  task_utils.py  tasks.py  torch_utils.py  train_classifier.py  train_utils.py  utils.py
spacer/caffe_backend/: utils.py
spacer/extractors/: __init__.py  base.py  efficientnet.py  torch_extractors.py  vgg16.py
spacer/models/: __init__.py  effcientnet_utils.py  efficientnet.py
spacer/tests/: common.py  decorators.py  test_aws.py  test_beta_regression.py  test_byteio_storage.py  test_caffe_utils.py  test_config.py  test_data_classes.py  test_deploy.py  test_extract_features.py  test_extract_features_utils.py  test_legacy.py  test_mailman.py  test_main.py  test_messages.py  test_models.py  test_storage.py  test_task_utils.py  test_tasks.py  test_torch_utils.py  test_train_classifier.py  test_train_utils.py  utils.py
spacer/tests/extractors/: test_base.py  test_efficientnet.py  test_torch_extractors.py  test_utils.py  test_vgg16.py
spacer/tests/fixtures/: legacy.jpg.feats  legacy.model
tests/: manual_tests.py  test_mailman.py  test_main.py  test_tasks.py
