[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspacer"
version = "0.9.0"
authors = [
  { name="Oscar Beijbom", email="oscar.beijbom@gmail.com" },
]
description = "Spatial image analysis with pytorch and caffe backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.2.0",
    "numpy>=1.19",
    "scikit-learn==1.1.3",
    "torch>=1.13.1,<2.3",
    "torchvision>=0.14.1,<0.18",
    "boto3",
]
license = {file = "license.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coralnet/pyspacer"
