[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyspacer"
version = "0.12.0"
authors = [
  { name="Oscar Beijbom", email="oscar.beijbom@gmail.com" },
]
description = "Spatial image analysis with pytorch and caffe backends."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Pillow>=10.4.0",
    "numpy>=1.22,<2.2",
    "scikit-learn==1.5.2",
    "torch>=2.6,<2.7",
    "torchvision>=0.21,<0.22",
    "boto3>=1.26.115",
]
license = {file = "license.txt"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/coralnet/pyspacer"
